feat: highlight changed values in Link collection and Checklist widget edit dialogs

--- a/src/Panoramic/Pages/Widgets/Checklist/EditDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/Checklist/EditDialog.xaml
@@ -5,6 +5,22 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Panoramic.ViewModels.Widgets.Checklist">
 
+    <Page.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Light">
+                    <SolidColorBrush x:Key="FieldForegroundBrush" Color="{ThemeResource TextFillColorPrimary}" />
+                    <SolidColorBrush x:Key="FieldChangedForegroundBrush" Color="#ac9100" />
+                </ResourceDictionary>
+
+                <ResourceDictionary x:Key="Dark">
+                    <SolidColorBrush x:Key="FieldForegroundBrush" Color="{ThemeResource TextFillColorPrimary}" />
+                    <SolidColorBrush x:Key="FieldChangedForegroundBrush" Color="#ecd100" />
+                </ResourceDictionary>
+            </ResourceDictionary.ThemeDictionaries>
+        </ResourceDictionary>
+    </Page.Resources>
+
     <Grid Width="450" RowSpacing="15">
         <Grid.Resources>
             <DataTemplate x:Key="ListViewTemplate" x:DataType="vm:EditTaskViewModel">
@@ -23,6 +39,7 @@
 
                     <TextBox Grid.Row="0" Grid.Column="0"
                              Text="{x:Bind Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Foreground="{x:Bind TitleForegroundBrush, Mode=OneWay}"
                              MaxLength="60"
                              PlaceholderText="Title" />
 
@@ -39,6 +56,7 @@
 
                     <TextBox Grid.Row="1" Grid.Column="0" Grid.ColumnSpan="2"
                              Text="{x:Bind Url, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Foreground="{x:Bind UrlForegroundBrush, Mode=OneWay}"
                              PlaceholderText="URL" />
                     
                     <HyperlinkButton Grid.Row="1" Grid.Column="2"
@@ -70,6 +88,7 @@
 
                     <TextBox Grid.Column="0"
                              Text="{x:Bind ViewModel.NewTaskTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             PlaceholderText="Title"
                              MaxLength="60" />
 
                     <CalendarDatePicker Grid.Column="1"
