--- a/src/Panoramic/Pages/MarkdownParsingFailure.xaml
+++ b/src/Panoramic/Pages/MarkdownParsingFailure.xaml
@@ -4,7 +4,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Grid Width="550">
+    <Grid Width="650">
         <Grid.RowDefinitions>
             <RowDefinition />
             <RowDefinition />
@@ -18,7 +18,7 @@
                    Margin="0 0 0 5">An error occurred during markdown parsing. The following widget file is not correctly formatted:</TextBlock>
 
         <TextBox Grid.Row="1"
-                 Text="{x:Bind FileName}"
+                 Text="{x:Bind RelativeFilePath}"
                  Margin="0 0 0 10"
                  IsReadOnly="True" />
 
