--- a/src/Panoramic/Pages/LinkDrawers/DrawerDialog.xaml
+++ b/src/Panoramic/Pages/LinkDrawers/DrawerDialog.xaml
@@ -29,6 +29,7 @@
                     <Grid.RowDefinitions>
                         <RowDefinition />
                         <RowDefinition />
+                        <RowDefinition />
                     </Grid.RowDefinitions>
 
                     <Grid.ColumnDefinitions>
@@ -37,7 +38,7 @@
                         <ColumnDefinition Width="50" />
                     </Grid.ColumnDefinitions>
 
-                    <FontIcon Grid.Row="0" Grid.Column="0" Grid.RowSpan="2"
+                    <FontIcon Grid.Row="0" Grid.Column="0" Grid.RowSpan="3"
                               ToolTipService.ToolTip="Drag to reorder"
                               Glyph="&#xE8CB;"
                               FontSize="14" />
@@ -66,6 +67,11 @@
                                      VerticalAlignment="Stretch">
                         <FontIcon Glyph="&#xE71B;" FontSize="14" />
                     </HyperlinkButton>
+
+                    <TextBox Grid.Row="2" Grid.Column="1"
+                             Text="{x:Bind SearchTerms, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Foreground="{x:Bind SearchTermsForegroundBrush, Mode=OneWay}"
+                             PlaceholderText="Search terms (comma separated)" />
                 </Grid>
 
             </DataTemplate>
@@ -96,6 +102,11 @@
                          MaxLength="5000"
                          Margin="0 10 0 0"
                          PlaceholderText="URL" />
+
+                <TextBox Text="{x:Bind ViewModel.NewLinkSearchTerms, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                         Margin="0 10 0 0"
+                         MaxLength="200"
+                         PlaceholderText="Search terms (comma separated)" />
 
                 <Button Content="Add"
                         Click="AddButton_Click"
