--- a/src/Panoramic/Pages/LinkDrawers/EditDrawerDialog.xaml
+++ b/src/Panoramic/Pages/LinkDrawers/EditDrawerDialog.xaml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Page
-    x:Class="Panoramic.Pages.LinkDrawers.DrawerDialog"
+    x:Class="Panoramic.Pages.LinkDrawers.EditDrawerDialog"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:vm="using:Panoramic.ViewModels.LinkDrawers">
