--- a/src/Panoramic/Pages/LinkDrawers/ViewDrawerDialog.xaml
+++ b/src/Panoramic/Pages/LinkDrawers/ViewDrawerDialog.xaml
@@ -19,7 +19,7 @@
 
         <Grid.RowDefinitions>
             <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="{x:Bind ViewModel.LinksListViewHeight}" />
         </Grid.RowDefinitions>
 
         <TextBox Grid.Row="0" Text="{x:Bind ViewModel.SearchText, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" PlaceholderText="Search" />
@@ -40,7 +40,6 @@
                 </Style>
             </ListView.ItemContainerStyle>
         </ListView>
-
     </Grid>
 
 </Page>
