--- a/src/Panoramic/Pages/LinkDrawers/EditDrawerDialog.xaml
+++ b/src/Panoramic/Pages/LinkDrawers/EditDrawerDialog.xaml
@@ -79,7 +79,7 @@
 
         <Grid.RowDefinitions>
             <RowDefinition />
-            <RowDefinition />
+            <RowDefinition Height="300" />
         </Grid.RowDefinitions>
 
         <Border Grid.Row="0" Padding="0 10 0 20" BorderThickness="0 0 0 1" BorderBrush="#666">
@@ -103,22 +103,29 @@
                          Margin="0 10 0 0"
                          PlaceholderText="URL" />
 
-                <TextBox Text="{x:Bind ViewModel.NewLinkSearchTerms, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
-                         Margin="0 10 0 0"
-                         MaxLength="200"
-                         PlaceholderText="Search terms (comma separated)" />
+                <Grid ColumnSpacing="10">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="*" />
+                        <ColumnDefinition Width="Auto" />
+                    </Grid.ColumnDefinitions>
 
-                <Button Content="Add"
-                        Click="AddButton_Click"
-                        IsEnabled="{x:Bind ViewModel.NewLinkFormValid, Mode=OneWay}"
-                        Margin="0 10 0 0"
-                        HorizontalAlignment="Right">
-                </Button>
+                    <TextBox Grid.Column="0"
+                             Text="{x:Bind ViewModel.NewLinkSearchTerms, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                             Margin="0 10 0 0"
+                             MaxLength="200"
+                             PlaceholderText="Search terms (comma separated)" />
+
+                    <Button Grid.Column="1"
+                            Click="AddButton_Click"
+                            IsEnabled="{x:Bind ViewModel.NewLinkFormValid, Mode=OneWay}"
+                            Margin="0 10 0 0"
+                            HorizontalAlignment="Right">Add</Button>
+                </Grid>
 
                 <FlyoutBase.AttachedFlyout>
                     <Flyout x:Name="DuplicateLinkFlyout">
                         <TextBlock TextWrapping="Wrap">
-                            <Run>The link already exists in the collection as:</Run>
+                            <Run>The link already exists in the drawer as:</Run>
                             <LineBreak/>
                             <Run Text="{x:Bind ViewModel.DuplicateLinkTitle, Mode=OneWay}" />
                         </TextBlock>
