--- a/src/Panoramic/Pages/Widgets/PreferencesDialog.xaml
+++ b/src/Panoramic/Pages/Widgets/PreferencesDialog.xaml
@@ -4,15 +4,15 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Border Width="350" Padding="0 10 0 0">
-        <Grid>
+    <Border Width="450" Padding="0 10 0 0">
+        <Grid RowSpacing="25">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
             
-            <Grid Grid.Row="0" Margin="0 0 0 25">
+            <Grid Grid.Row="0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto" />
                     <RowDefinition Height="Auto" />
@@ -29,16 +29,55 @@
                 <TextBlock Grid.Row="1" Margin="0 5 0 0" Foreground="{x:Bind ViewModel.ThemeInfoLabelForeground, Mode=OneWay}" TextWrapping="Wrap">Changes to the Theme won't apply until the app is restarted.</TextBlock>
             </Grid>
 
-            <TextBox Grid.Row="1"
-                     Text="{x:Bind ViewModel.StoragePath, Mode=OneWay}"
-                     IsReadOnly="True"
-                     Header="Storage path" />
+            <StackPanel Grid.Row="1">
+                <TextBox Text="{x:Bind ViewModel.StoragePath, Mode=OneWay}"
+                         IsReadOnly="True"
+                         Header="Storage path" />
 
-            <Button Grid.Row="2"
-                    x:Name="PickFolderButton"
-                    Click="ChangeStoragePathButton_Click"
-                    HorizontalAlignment="Right"
-                    Margin="0 10 0 0">Change</Button>
+                <Button x:Name="PickFolderButton"
+                        Click="ChangeStoragePathButton_Click"
+                        HorizontalAlignment="Right"
+                        Margin="0 10 0 0">Change</Button>
+            </StackPanel>
+
+            <StackPanel Grid.Row="2">
+                <StackPanel Orientation="Horizontal" Margin="0 0 0 15">
+                    <TextBlock FontSize="16">Auto-save</TextBlock>
+                    <FontIcon Glyph="&#xE946;"
+                              ToolTipService.ToolTip="Panoramic auto-saves any changes made. In order to avoid frequent calls to the file system, every change is enqueued and saved to disk only after the configured interval. This is done in a debounced fashion, as in any additional change will restart the auto-save timer - further postponing the save. To avoid delaying a save for too long, a max delay is introduced."
+                              Margin="8 0 0 0"
+                              FontSize="14"
+                              VerticalAlignment="Center" />
+                </StackPanel>
+
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
+
+                    <ComboBox Grid.Column="0"
+                              SelectedItem="{x:Bind ViewModel.SelectedAutoSaveInterval, Mode=TwoWay}"
+                              Header="Interval">
+                        <x:String>5 seconds</x:String>
+                        <x:String>10 seconds</x:String>
+                        <x:String>15 seconds</x:String>
+                        <x:String>20 seconds</x:String>
+                        <x:String>25 seconds</x:String>
+                    </ComboBox>
+
+                    <ComboBox Grid.Column="1"
+                              SelectedItem="{x:Bind ViewModel.SelectedAutoSaveMaxDelay, Mode=TwoWay}"
+                              Header="Max delay">
+                        <x:String>30 seconds</x:String>
+                        <x:String>45 seconds</x:String>
+                        <x:String>1 minute</x:String>
+                        <x:String>2 minutes</x:String>
+                        <x:String>3 minutes</x:String>
+                        <x:String>5 minutes</x:String>
+                    </ComboBox>
+                </Grid>
+            </StackPanel>
         </Grid>
     </Border>
 </Page>
