--- a/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidgetPage.xaml
+++ b/src/Panoramic/Pages/Widgets/RecentLinks/RecentLinksWidgetPage.xaml
@@ -60,7 +60,13 @@
                                          Click="{x:Bind Click}"
                                          ToolTipService.ToolTip="{x:Bind Tooltip}"
                                          HorizontalAlignment="Stretch"
-                                         HorizontalContentAlignment="Left" />
+                                         HorizontalContentAlignment="Left">
+                            <HyperlinkButton.ContextFlyout>
+                                <MenuBarItemFlyout>
+                                    <MenuFlyoutItem Click="{x:Bind Copy}">Copy</MenuFlyoutItem>
+                                </MenuBarItemFlyout>
+                            </HyperlinkButton.ContextFlyout>
+                        </HyperlinkButton>
 
                         <Border Grid.Column="1"
                                 CornerRadius="5"
